jdk 15 with nimbus look and feel
edit sun.misc Base64 Encode to apache.commons "jar" for encode and decode http header over RFC1521.